@@ -15,8 +15,6 @@
  */
 package org.dominokit.domino.ui.forms;
 
-import org.dominokit.domino.ui.utils.ElementUtil;
-
 /** A component that has an input to take/provide Short value */
 public class ShortBox extends NumberBox<ShortBox, Short> {
 
@@ -45,7 +43,6 @@ public class ShortBox extends NumberBox<ShortBox, Short> {
    */
   public ShortBox(String label) {
     super(label);
-    ElementUtil.numbersOnly(this);
   }
 
   /** {@inheritDoc} */
@@ -57,13 +54,7 @@ public class ShortBox extends NumberBox<ShortBox, Short> {
   /** {@inheritDoc} */
   @Override
   protected Short parseValue(String value) {
-    double dValue = getNumberFormat().parse(value);
-    double maxShort = new Double(getMaxValue());
-
-    if (dValue > maxShort) {
-      throw new NumberFormatException("Exceeded maximum value");
-    }
-    return new Double(dValue).shortValue();
+    return Double.valueOf(parseDouble(value)).shortValue();
   }
 
   /** {@inheritDoc} */
